# CS860

./: .gitignore  CMakeLists.txt  README.md  firstMorph  main.cpp  out  out2  run.sh  secondMorph
cmake/: gmp.cmake
include/: firstMorph.h  hmatrix.h  matrix.h  morphism.h  sequence.h  subwordGen.h  zeroDet.h
src/: firstMorph.cpp  main.cpp  sequence.cpp  subwordGen.cpp
