cmake_minimum_required (VERSION 2.6)
project (cs860 CXX)
find_package(OpenMP)
if(OPENMP_FOUND)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
include_directories(${cs860_SOURCE_DIR}/include)
add_executable(cs860 src/main.cpp src/firstMorph.cpp src/sequence.cpp src/subwordGen.cpp)
